# handlr

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: main.yml
assets/completions/: _handlr  handlr  handlr.fish
assets/manual/man1/: handlr-add.1  handlr-get.1  handlr-launch.1  handlr-list.1  handlr-mime.1  handlr-open.1  handlr-remove.1  handlr-set.1  handlr-unset.1  handlr.1
handlr-regex/: Cargo.toml
handlr-regex/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  utils.rs
handlr-regex/src/apps/: mod.rs  system.rs  user.rs
handlr-regex/src/common/: db.rs  desktop_entry.rs  handler.rs  mime_types.rs  mod.rs  path.rs  table.rs
handlr-regex/src/common/testdata/: autocomplete_mimes_and_extensions.golden  piped_output.golden  terminal_output.golden
handlr-regex/src/config/: config_file.rs  main_config.rs
handlr-regex/src/config/testdata/: print_handlers_default.golden  print_handlers_detailed.golden  print_handlers_detailed_json.golden  print_handlers_json.golden  print_handlers_piped.golden
handlr-regex/tests/: empty_exec.desktop
src/: cli.rs  config.rs  error.rs  main.rs  utils.rs
src/apps/: system.rs  user.rs
src/apps/snapshots/: handlr__apps__user__tests__add_handlers_expand_wildcards.snap  handlr__apps__user__tests__remove_handlers_expand_wildcards.snap  handlr__apps__user__tests__set_handlers_expand_wildcards.snap  handlr__apps__user__tests__unset_handlers_expand_wildcards.snap
src/apps/testdata/: add_handlers_expand_wildcards.golden  remove_handlers_expand_wildcards.golden  set_handlers_expand_wildcards.golden  unset_handlers_expand_wildcards.golden
src/common/: db.rs  desktop_entry.rs  handler.rs  mime_types.rs  mod.rs  path.rs  table.rs
src/common/snapshots/: handlr__common__path__tests__mime_table_json.snap  handlr__common__path__tests__mime_table_piped.snap  handlr__common__path__tests__mime_table_terminal.snap  handlr__common__table__tests__piped_output.snap  handlr__common__table__tests__terminal_output.snap
src/common/testdata/: mime_table_terminal.golden  test_mime_table_json.golden  test_mime_table_piped.golden
src/config/: config_file.rs  main_config.rs  mod.rs
src/config/snapshots/: handlr__config__main_config__tests__print_handlers_default.snap  handlr__config__main_config__tests__print_handlers_detailed.snap  handlr__config__main_config__tests__print_handlers_detailed_json-2.snap  handlr__config__main_config__tests__print_handlers_detailed_piped.snap  handlr__config__main_config__tests__print_handlers_json.snap  handlr__config__main_config__tests__print_handlers_piped.snap  handlr__config__main_config__tests__show_handler.snap  handlr__config__main_config__tests__show_handler_json.snap  handlr__config__main_config__tests__show_handler_json_terminal.snap
src/config/testdata/: print_handlers_detailed_piped.golden  show_handler_json.golden  show_handler_json_terminal.golden  show_handler_terminal.golden
tests/: empty_name.desktop  mimeapps_anomalous_semicolons.list  mimeapps_duplicate.list  mimeapps_empty_entry.list  mimeapps_no_added.list  mimeapps_no_default.list  mimeapps_sorted.list
xtask/: Cargo.toml
xtask/src/: common.rs  main.rs
