[package]
name = "handlr-regex"
version = "0.10.1"
authors = ["Duncan Russell <Duncan@anomalocaris.xyz>", "Gregory <gregory.mkv@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Fork of handlr with regex support"
repository = "https://github.com/Anomalocaridid/handlr-regex"
readme = "../README.md"

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
clap = { version = "4.5.2", features = ["derive"] }
url = "2.2.1"
itertools = "0.10.0"
shlex = "1.3.0"
thiserror = "1.0.24"
xdg = "2.2.0"
mime = "0.3.16"
mime-db = "1.3.0"
confy = "0.4.0"
serde = { version = "1.0.125", features = ["derive"] }
xdg-mime = "0.4.0"
freedesktop_entry_parser = "1.1.1"
once_cell = "1.7.2"
aho-corasick = "0.7.15"
regex = { version = "1", default-features = false, features = ["std", "unicode-perl"] }
tabled = "0.15.0"
serde_json = "1.0"

[[bin]]
name = "handlr"
path = "src/main.rs"
