[package]
name = "handlr-regex"
version = "0.10.1"
authors = ["Duncan Russell <Duncan@anomalocaris.xyz>", "Gregory <gregory.mkv@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Fork of handlr with regex support"
repository = "https://github.com/Anomalocaridid/handlr-regex"
readme = "../README.md"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
url = "2.2.1"
itertools = "0.10.0"
shlex = "1.3.0"
thiserror = "1.0.24"
xdg = "2.2.0"
mime = "0.3.16"
mime-db = "1.3.0"
confy = "0.4.0"
serde = { version = "1.0.125", features = ["derive"] }
xdg-mime = "0.4.0"
once_cell = "1.7.2"
aho-corasick = "0.7.15"
regex = { version = "1", default-features = false, features = ["std", "unicode-perl"] }
tabled = "0.15.0"
serde_json = "1.0"
serde_regex = "1.1.0"
enum_dispatch = "0.3.13"
freedesktop-desktop-entry = "0.6.1"
derive_more = { version = "0.99.18", default-features = false, features = ["deref", "deref_mut"] }
serde_ini = "0.2.0"
serde_with = "3.8.3"

[[bin]]
name = "handlr"
path = "src/main.rs"
